<resources>
    <string name="app_name" translatable="false">SMSecure</string>
    <string name="AbstractNotificationBuilder_new_message">New message</string>
    <string name="AndroidManifest__change_passphrase">Change passphrase</string>
    <string name="AndroidManifest__enter_passphrase">Enter passphrase</string>
    <string name="AndroidManifest__initializing_secure_storage">Initializing secure storage…</string>
    <string name="AndroidManifest__log_submit">Submit debug log</string>
    <string name="AndroidManifest__message_details" translatable="false">Message details</string>
    <string name="AndroidManifest__public_identity_key">Public identity key</string>
    <string name="AndroidManifest__select_contacts">Select contacts</string>
    <string name="AndroidManifest__verify_identity">Verify identity</string>
    <string name="AndroidManifest_archived_conversations">Archived conversations</string>
    <string name="ApplicationMigrationService_import_complete">Import complete</string>
    <string name="ApplicationMigrationService_import_in_progress">Import in progress</string>
    <string name="ApplicationMigrationService_importing_text_messages">Importing text messages</string>
    <string name="ApplicationMigrationService_system_database_import_is_complete">System database import is complete.</string>
    <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">You haven’t set a passphrase yet!</string>
    <string name="ApplicationPreferencesActivity_appearance_summary">Theme <xliff:g xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" id="arg1">%1$s</xliff:g>, Language <xliff:g xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" id="arg2">%2$s</xliff:g></string>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Delete all old messages now?</string>
    <string name="ApplicationPreferencesActivity_disable_storage_encryption">Disable storage encryption?</string>
    <string name="ApplicationPreferencesActivity_incoming_summary">Incoming <xliff:g xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" id="arg1">%s</xliff:g></string>
    <string name="ApplicationPreferencesActivity_privacy_summary">Passphrase <xliff:g xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" id="arg1">%1$s</xliff:g>, Screen security <xliff:g xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" id="arg2">%2$s</xliff:g></string>
    <string name="ApplicationPreferencesActivity_sms_disabled">Incoming SMS disabled</string>
    <string name="ApplicationPreferencesActivity_sms_enabled">Incoming SMS enabled</string>
    <string name="ApplicationPreferencesActivity_smsecure_is_currently_your_default_sms_app">SMSecure is currently your default SMS app</string>
    <string name="Import_Export">Import / Export</string>
    <string name="conversation_menu__archive_conversation">Archive conversation</string>
    <string name="conversation_menu__conversation_settings">Conversation settings</string>
    <string name="conversation_menu__delete_conversation">Delete conversation</string>
    <string name="conversation_menu__unarchive_conversation">Unarchive conversation</string>
    <string name="conversation_callable__menu_call">Call</string>
    <string name="conversation_add_to_contacts__menu_add_to_contacts">Add to contacts</string>
    <string name="conversation_group_options__recipients_list">Recipients list</string>
    <string name="conversation_insecure__invite">Invite</string>
    <string name="conversation_insecure__menu_start_secure_session">Start secure session</string>
    <string name="conversation_insecure__security">Security</string>
    <string name="conversation_list_menu__archived_conversations">Archived conversations</string>
    <string name="conversation_list_menu__lock">Lock</string>
    <string name="conversation_list_menu__mark_all_as_read">Mark all read</string>
    <string name="conversation_list_menu__new_group">New group</string>
    <string name="conversation_list_menu__settings">Settings</string>
    <string name="conversation_list_menu__your_identity_key">Your identity key</string>
    <string name="conversation_muted__unmute">Unmute</string>
    <string name="conversation_secure_verified__menu_abort_secure_session">End secure session</string>
    <string name="conversation_secure_verified__menu_verify_identity">Verify identity</string>
    <string name="conversation_unmuted__mute_notifications">Mute notifications</string>
    <string name="preferences__about">About SMSecure</string>
    <string name="preferences__advanced">Advanced</string>
    <string name="preferences__always_ask_for_sim_card">Always ask for SIM card</string>
    <string name="preferences__always_ask_for_the_sim_card_to_use_when_sending_messages">Always ask for the SIM card to use when sending messages</string>
    <string name="preferences__appearance">Appearance</string>
    <string name="preferences__automatically_complete_key_exchanges_for_new_sessions_or_for_existing_sessions_with_the_same_identity_key">Automatically complete key exchanges for new sessions or for existing sessions with the same identity key</string>
    <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">Automatically delete older messages once a conversation exceeds a specified length</string>
    <string name="preferences__blocked_contacts">Blocked contacts</string>
    <string name="preferences__change_notification_sound">Change notification sound</string>
    <string name="preferences__change_passphrase">Change passphrase</string>
    <string name="preferences__change_your_passphrase">Change your passphrase</string>
    <string name="preferences__chats">Chats and media</string>
    <string name="preferences__complete_key_exchanges">Complete key exchanges</string>
    <string name="preferences__conversation_length_limit">Conversation length limit</string>
    <string name="preferences__delete_old_messages">Delete old messages</string>
    <string name="preferences__diagnostic_logging_level">Diagnostic logging level</string>
    <string name="preferences__diagnostic_logging_level_summary">Controls how much diagnostic information SMSecure stores internally.</string>
    <string name="preferences__disable_emoji_drawer">Disable emoji drawer</string>
    <string name="preferences__disable_screen_security_to_allow_screen_shots">Block screenshots in the recents list and inside the app</string>
    <string name="preferences__disable_smsecures_built_in_emoji_support">Disable SMSecure’s built-in emoji support</string>
    <string name="preferences__display_a_notification_when_a_delivery_report_is_received">Display a notification when a delivery report is received</string>
    <string name="preferences__display_in_notifications">Display in notifications</string>
    <string name="preferences__display_in_notifications_which_elements_show">Select which elements to show in the notification</string>
    <string name="preferences__enable_local_encryption_of_messages_and_keys">Enable local encryption of messages and keys</string>
    <string name="preferences__enable_message_notifications">Enable message notifications</string>
    <string name="preferences__enable_panic_on_device_lock_button">Auto-lock on Screen Lock</string>
    <string name="preferences__enable_passphrase">Enable passphrase</string>
    <string name="preferences__enable_this_option_if_your_keyboard_supports_emojis">Enable this option if your keyboard supports emojis.</string>
    <string name="preferences__enter_key_summary">Choose whether the Enter key sends the message or inserts a new line</string>
    <string name="preferences__forget_passphrase_from_memory_after_some_interval">Require the passphrase to access messages after a given time</string>
    <string name="preferences__hide_divider_between_read_and_unread_messages">Hide the divider between read and unread messages</string>
    <string name="preferences__hide_unread_message_divider">Hide unread message divider</string>
    <string name="preferences__in_conversation_notifications">In-conversation notifications</string>
    <string name="preferences__incognito_keyboard">Incognito keyboard</string>
    <string name="preferences__keyboard_settings">Keyboard options</string>
    <string name="preferences__make_default_sms_app">Set as default SMS app</string>
    <string name="preferences__make_smsecure_the_default_sms_app">Make SMSecure the default SMS application for your system.</string>
    <string name="preferences__message_trimming">Message trimming</string>
    <string name="preferences__messages">Messages</string>
    <string name="preferences__notifications">Notifications</string>
    <string name="preferences__panic_button">Panic button</string>
    <string name="preferences__play_inthread_notifications">Play notification sound when viewing an active conversation.</string>
    <string name="preferences__pref_timeout_interval_title">Timeout interval</string>
    <string name="preferences__privacy">Privacy</string>
    <string name="preferences__privacy_policy">Privacy policy</string>
    <string name="preferences__repeat_notification">Repeat notification</string>
    <string name="preferences__repeat_notification_number_times_select">Select the number of times the notification repeats</string>
    <string name="preferences__request_a_delivery_report_for_each_sms_message_you_send">Request a delivery report for each SMS message you send</string>
    <string name="preferences__request_keyboard_to_disable_personalized_learning">If set to incognito mode, the keyboard won’t remember, learn, or store any words you type</string>
    <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">Scan through all conversations and enforce conversation length limits</string>
    <string name="preferences__screen_security">Screen security</string>
    <string name="preferences__show_sent_time">Show sent time</string>
    <string name="preferences__show_sent_time_instead_of_received_time_in_conversations">Show sent time instead of received time for incoming messages</string>
    <string name="preferences__sms_delivery_reports">SMS delivery reports</string>
    <string name="preferences__sms_delivery_reports_notification">SMS delivery reports notification</string>
    <string name="preferences__sound">Sound</string>
    <string name="preferences__submit_debug_log">Submit debug log</string>
    <string name="preferences__submit_debug_log_summary">Collect diagnostic information and share it for troubleshooting.</string>
    <string name="preferences__summary_enable_panic_on_device_lock_button">Automatically lock the app when your device is locked</string>
    <string name="preferences__summary_panic_button">Enable panic button from “Ripple: respond when panicking” by Guardian Project</string>
    <string name="preferences__timeout_passphrase">Timeout passphrase</string>
    <string name="preferences__trim_all_conversations_now">Trim all conversations now</string>
    <string name="preferences__use_system_emoji">Use system emoji</string>
    <string name="preferences__write_logs_to_android_logcat">Write logs to Android logcat</string>
    <string name="preferences__write_logs_to_android_logcat_summary">Allows SMSecure to write its logs to the system log. Disable this for better privacy.</string>
    <string name="recipient_preferences__block">Block</string>
    <string name="recipient_preferences__color">Color</string>
    <string name="recipient_preferences__color_for_this_contact">Color for this contact</string>
    <string name="recipient_preferences__disable_notifications_for_this_conversation">Disable notifications for this conversation</string>
    <string name="recipient_preferences__mute_conversation">Mute conversation</string>
    <string name="recipient_preferences__notification_sound">Notification sound</string>
</resources>