<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <org.jimvixx.smsecure.preferences.widgets.SMSecureSwitchPreferenceCompat
        android:defaultValue="true"
        android:icon="@drawable/ic_account_lock"
        android:key="pref_enable_passphrase_temporary"
        android:summary="@string/preferences__enable_local_encryption_of_messages_and_keys"
        android:title="@string/preferences__enable_passphrase"
        app:rightSummaryMaxLines="1" />

    <org.jimvixx.smsecure.preferences.widgets.SMSecurePreference
        android:dependency="pref_enable_passphrase_temporary"
        android:icon="@drawable/ic_form_textbox_password"
        android:key="pref_change_passphrase"
        android:summary="@string/preferences__change_your_passphrase"
        android:title="@string/preferences__change_passphrase" />

    <org.jimvixx.smsecure.preferences.widgets.SMSecureSwitchPreferenceCompat
        android:defaultValue="false"
        android:dependency="pref_enable_passphrase_temporary"
        android:icon="@drawable/ic_lock_clock"
        android:key="pref_timeout_passphrase"
        android:summary="@string/preferences__forget_passphrase_from_memory_after_some_interval"
        android:title="@string/preferences__timeout_passphrase"
        app:rightSummaryMaxLines="1" />

    <org.jimvixx.smsecure.preferences.widgets.SMSecurePreference
        android:dependency="pref_timeout_passphrase"
        android:icon="@drawable/ic_timer_lock"
        android:key="pref_timeout_interval"
        android:title="@string/preferences__pref_timeout_interval_title"
        app:rightSummaryMaxLines="1" />

    <org.jimvixx.smsecure.preferences.widgets.SMSecureSwitchPreferenceCompat
        android:defaultValue="true"
        android:icon="@drawable/ic_book_lock"
        android:key="pref_screen_security"
        android:summary="@string/preferences__disable_screen_security_to_allow_screen_shots"
        android:title="@string/preferences__screen_security"
        app:rightSummaryMaxLines="1" />

    <org.jimvixx.smsecure.preferences.widgets.SMSecureSwitchPreferenceCompat
        android:defaultValue="true"
        android:icon="@drawable/ic_timer_lock"
        android:key="pref_incognito_keyboard"
        android:summary="@string/preferences__request_keyboard_to_disable_personalized_learning"
        android:title="@string/preferences__incognito_keyboard"
        app:rightSummaryMaxLines="1" />

    <org.jimvixx.smsecure.preferences.widgets.SMSecureSwitchPreferenceCompat
        android:defaultValue="false"
        android:icon="@drawable/ic_account_alert"
        android:key="pref_enable_panic_button"
        android:summary="@string/preferences__summary_panic_button"
        android:title="@string/preferences__panic_button"
        app:rightSummaryMaxLines="1" />

    <org.jimvixx.smsecure.preferences.widgets.SMSecureSwitchPreferenceCompat
        android:defaultValue="false"
        android:icon="@drawable/ic_cellphone_lock"
        android:key="pref_enable_panic_on_device_lock_button"
        android:summary="@string/preferences__summary_enable_panic_on_device_lock_button"
        android:title="@string/preferences__enable_panic_on_device_lock_button"
        app:rightSummaryMaxLines="1" />

    <org.jimvixx.smsecure.preferences.widgets.SMSecurePreference
        android:icon="@drawable/ic_block"
        android:key="preference_category_blocked"
        android:title="@string/preferences__blocked_contacts" />

</PreferenceScreen>