<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <org.jimvixx.smsecure.preferences.widgets.SMSecurePreferenceCategory
        android:key="message_trimming"
        android:title="@string/preferences__message_trimming">

        <org.jimvixx.smsecure.preferences.widgets.SMSecureSwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_delete_alert"
            android:key="pref_trim_threads"
            android:summary="@string/preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length"
            android:title="@string/preferences__delete_old_messages"
            app:rightSummaryMaxLines="1" />

        <org.jimvixx.smsecure.preferences.widgets.SMSecureEditTextPreference
            android:defaultValue="500"
            android:dependency="pref_trim_threads"
            android:icon="@drawable/ic_counter"
            android:inputType="number"
            android:key="pref_trim_length"
            android:title="@string/preferences__conversation_length_limit"
            app:rightSummaryMaxLines="1" />

        <org.jimvixx.smsecure.preferences.widgets.SMSecurePreference
            android:dependency="pref_trim_threads"
            android:icon="@drawable/ic_delete_empty"
            android:key="pref_trim_now"
            android:summary="@string/preferences__scan_through_all_conversations_and_enforce_conversation_length_limits"
            android:title="@string/preferences__trim_all_conversations_now" />

    </org.jimvixx.smsecure.preferences.widgets.SMSecurePreferenceCategory>

</PreferenceScreen>